# drf-commons

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  __init__.py  apps.py  pyproject.toml  settings.py  setup.py
.github/workflows/: build.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml  tests.yml
common_conf/: settings.py
current_user/: __init__.py  apps.py  fields.py  middleware.py  utils.py
debug/: __init__.py  apps.py  decorators.py  logger.py  logging_config.py  middleware.py  utils.py
debug/core/: categories.py
debug/logging/: __init__.py  config.py  directories.py  formatters.py
decorators/: __init__.py  cache.py  database.py  logging.py  performance.py
docs/: Makefile  architecture.rst  best_practices.rst  changelog.rst  conf.py  contributing.rst  core_concepts.rst  current_user.rst  decorators.rst  development.rst  django_settings.py  drf_pain_points.rst  exceptions.rst  extensibility.rst  filters.rst  index.rst  installation.rst  limitations.rst  middlewares.rst  models.rst  pagination.rst  production_usage.rst  publishing.rst  quickstart.rst  requirements.txt  responses.rst  serializers.rst  services.rst  testing.rst  utilities.rst  views.rst
docs/api/: index.rst  modules.rst
docs/modules/: common_conf.rst  current_user.rst  debug.rst  decorators.rst  filters.rst  index.rst  internals.rst  middlewares.rst  models.rst  pagination.rst  response.rst  serializer_relationship_patterns.rst  serializers.rst  services.rst  views.rst
docs/scripts/: generate_api_docs.py
drf_common/common_conf/: django_settings.py  settings.py  test_urls.py
drf_common/common_tests/: __init__.py  base_cases.py  conftest.py  factories.py  utils.py
drf_common/current_user/: apps.py  utils.py
drf_common/debug/: apps.py  utils.py
drf_common/decorators/: __init__.py  cache.py  database.py  logging.py  performance.py
drf_common/filters/: __init__.py  apps.py
drf_common/middlewares/: current_user.py  debug.py
drf_common/models/: __init__.py  base.py  fields.py  mixins.py  person.py
drf_common/pagination/: apps.py
drf_common/response/: apps.py
drf_common/serializers/: __init__.py  apps.py
drf_common/tests/: test_e2e.py  test_installation.py  test_middleware_integration.py  test_service_integration.py  test_viewset_integration.py
drf_common/utils/: __init__.py  middleware_checker.py
drf_common/views/: apps.py
drf_commons/: __init__.py  apps.py
drf_commons/common_conf/: django_settings.py  settings.py  test_urls.py  test_views.py
drf_commons/common_tests/: __init__.py  base_cases.py  models.py  utils.py
drf_commons/current_user/: __init__.py  utils.py
drf_commons/debug/: logger.py  utils.py
drf_commons/decorators/: logging.py
drf_commons/management/: __init__.py
drf_commons/middlewares/: current_user.py
drf_commons/migrations/: 0001_test_models.py
drf_commons/models/: __init__.py  base.py  content.py  fields.py  mixins.py  person.py
drf_commons/response/: __init__.py  utils.py
drf_commons/serializers/: base.py
drf_commons/tests/: __init__.py  test_e2e.py  test_installation.py  test_middleware_integration.py  test_viewset_integration.py
drf_commons/utils/: middleware_checker.py
filters/: __init__.py  apps.py  convenience.py  ordering.py
filters/core/: __init__.py  backend.py  filterset.py  logical.py  types.py
filters/operators/: __init__.py  datetime.py  mapping.py  numeric.py  related.py  special.py  text.py
filters/ranges/: __init__.py  date.py  multiple.py  (+2 more)
middlewares/: __init__.py  current_user.py  debug.py
models/: __init__.py  base.py  content.py  fields.py  person.py
pagination/: __init__.py  apps.py  base.py
response/: __init__.py  apps.py  utils.py
serializers/: __init__.py  apps.py  base.py  core.py  mixins.py  related.py
templatetags/: dict_extras.py
tests/: test_common_conf_settings.py  test_urls.py
views/: __init__.py  apps.py  base.py  mixins.py
(+211 files in other folders)
